--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             href="https://scanoss.com">https://scanoss.com</a></p>
         </div>
       </div>
-      <div class="row disclaimer">
-        Copyright (c) 2020 SCANOSS.COM. This program is released under the GPL-2.0 license. Please check our <a href="https://github.com/scanoss/quickscan">quickscan</a> project
-        page for details.
+      <div class="row intro-body disclaimer">
+        <p>Copyright (c) 2020 SCANOSS.COM. This program is released under the GPL-2.0 license. Please check our <a href="https://github.com/scanoss/quickscan">quickscan</a> project
+        page for details.</p>
       </div>
     </div>
   </div>
