--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
     </div>
   </div>
 
+  <div class="container-fluid alert">
+    <div class="report-body">
+      <div class="alert-content">
+        <div class="alert alert-danger" role="alert">
+          There was an issue scanning this folder. Please try again. 
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
 
   <div id="report" class="report">
     <div class="container-fluid">
