View charts on scan list

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
               <div class="col-sm chart">
                 <canvas id="oss-chart" width="500" height="150"></canvas>
               </div>
+            </div> 
+            <div class="row">
               <div class="col-sm chart">
                 <h5 id="novulns">No vulnerabilities detected</h5>
                 <canvas id="vuln-chart" width="500" height="300"></canvas>
