Fixed issue with symlinks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="btn btn-outline-light my-2 my-sm-0" id="new-sbom">SCAN FOLDER</a>
       </li>
       <li>
-        <button class="btn btn-outline-light my-2 my-sm-0 download-button disabled">DOWNLOAD REPORT</button>
+        <a href="scans.html" class="btn btn-outline-light my-2 my-sm-0 ml-1">REPORTS</a>
       </li>
     </ul>
 
