--- a/scans.html
+++ b/scans.html
@@ -20,7 +20,7 @@
     <a class="navbar-brand" href="#"><img src="quickscan.png" width="150"></a>
     <ul class="nav navbar-nav ml-auto mr-1">
       <li>
-        <a href="index.html" class="btn btn-outline-light my-2 my-sm-0">RETURN TO SCAN PAGE</a>
+        <a href="index.html" class="btn btn-outline-light my-2 my-sm-0">BACK TO SCAN</a>
       </li>
 
     </ul>
