--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="btn btn-outline-light my-2 my-sm-0" id="new-sbom">SCAN FOLDER</a>
       </li>
       <li>
-        <a href="scans.html" class="btn btn-outline-light my-2 my-sm-0 ml-1">REPORTS</a>
+        <a href="scans.html" class="btn btn-outline-light my-2 my-sm-0 ml-2 reports-btn">REPORTS</a>
       </li>
     </ul>
 
