--- a/scans.html
+++ b/scans.html
@@ -20,7 +20,10 @@
     <a class="navbar-brand" href="#"><img src="quickscan.png" width="150"></a>
     <ul class="nav navbar-nav ml-auto mr-1">
       <li>
-        <a href="index.html" class="btn btn-outline-light my-2 my-sm-0">BACK TO SCAN</a>
+        <a href="index.html" class="btn btn-outline-light my-2 my-sm-0">SCAN</a>
+      </li>
+      <li>
+        <a href="scans.html" class="btn btn-outline-light ml-2">REPORTS</a>
       </li>
 
     </ul>
@@ -29,7 +32,7 @@
 
   <div class="container-fluid">
     <div class="report-body scans">
-
+      
       <div class="row stable ">
         <div class="col-sm ">
           <h6>Scan Files</h6>
@@ -56,8 +59,8 @@
     </div>
 
     <div class="report-body charts">
-      <div class="back">
-        <a href="scans.html" class="btn btn-outline-dark f-80">Back to scans</a>
+      <div class="row">
+        <h5 class="report-title">&nbsp;</h5>
       </div>
       <div class="row">
         <div class="col-sm chart">
