--- a/help.html
+++ b/help.html
@@ -59,7 +59,7 @@
           etc. There are also source files that contain only headers or not enough information to be sampled. </p>
       </div>
       <div class="row intro-body">
-        <h5>Why do i see snippets with 0% or 100%?</h5>
+        <h5>Why do I see snippets with 0% or 100%?</h5>
         <p>It is possible to see values of 0% and 100% to represent the snippet range due to roundup.</p>
       </div>
       <div class="row intro-body">
