Fixed FAQ label

--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="desktop.css">
 
-  <title>SCANOSS Quickscan - Help / FAQ</title>
+  <title>SCANOSS Quickscan - FAQ</title>
 </head>
 
 <body>
