Several bug fixes, add more tables to DB
Several bug fixes, add more tables to DB

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="row intro-body disclaimer">
-        <p>Copyright (c) 2020 SCANOSS.COM. This program is released under the GPL-2.0 license. Please check our <a href="https://github.com/scanoss/quickscan">quickscan</a> project
+        <p>Copyright (c) 2020, 2021 SCANOSS.COM. This program is released under the GPL-2.0 license. Please check our <a href="https://github.com/scanoss/quickscan">quickscan</a> project
         page for details.</p>
       </div>
     </div>
