--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="desktop.css">
 
-  <title>SCANOSS Quickscan</title>
+  <title>SCANOSS Quickscan Lite</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand navbar-dark justify-content-end">
 
-    <a class="navbar-brand" href="#"><img src="quickscan.png" width="150"></a>
+    <a class="navbar-brand" href="#"><img src="QS_lite_logo_white.png" width="150"></a>
     <ul class="nav navbar-nav ml-auto mr-1">
       <li id='resume-scan'>
         <a href="#" class="btn btn-outline-light my-2 my-sm-0 mr-2">RESUME</a>
@@ -36,7 +36,7 @@
     <div class="report-body">
       
       <div class="row intro-body first-row">
-        <h5>What is SCANOSS Quickscan?</h5>
+        <h5>What is SCANOSS Quickscan Lite?</h5>
         <p>It is a tool that demonstrates scanning source code against <a href="https://osskb.org">osskb.org</a>.
           SCANOSS Quickscan scans source code
           against a knowledge base representing the entire OSS community. The results of the scan contain OSS matches
