--- a/scans.html
+++ b/scans.html
@@ -11,13 +11,13 @@
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="desktop.css">
 
-  <title>SCANOSS Quickscan</title>
+  <title>SCANOSS Quickscan Lite</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand navbar-dark justify-content-end">
 
-    <a class="navbar-brand" href="#"><img src="quickscan.png" width="150"></a>
+    <a class="navbar-brand" href="#"><img src="QS_lite_logo_white.png" width="150"></a>
     <ul class="nav navbar-nav ml-auto mr-1">
       <li id='resume-scan'>
         <a href="#" class="btn btn-outline-light my-2 my-sm-0">RESUME</a>
