Obligation table added

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="row ctable">
           <div class="col-sm ">
             <h6>Component matches for license <span class="hoverlicense"></span></h6>
-            <table class="table table-hover thead-light">
+            <table class="table table-hover thead-light upgradeable">
               <thead>
                 <tr>
                   <th scope="col">Vendor</th>
@@ -167,7 +167,7 @@
         <div class="row vtable">
           <div class="col-sm ">
             <h6>Components with <span class="severity"></span> Vulnerabilities</h6>
-            <table class="table table-hover thead-light">
+            <table class="table table-hover thead-light upgradeable">
               <thead>
                 <tr>
                   <th scope="col">Vendor</th>
@@ -182,6 +182,32 @@
           </div>
 
         </div>
+
+
+
+        <div class="row otable">
+          <div class="col-sm ">
+            <h6>License Obligations</h6>
+            <table class="table table-hover thead-light">
+              <thead>
+                <tr>
+                  <th scope="col">License Name</th>
+                  <th scope="col">Link</th>
+                  <th scope="col">Copyleft</th>
+                  <th scope="col">Patent Hint</th>
+                  <th scope="col">Incompatible Licenses</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+
+
+
+
       </div>
     </div>
   </div>
