Fixed bug: License and Vulns table not showed after open a previous scan

--- a/scans.html
+++ b/scans.html
@@ -110,7 +110,7 @@
       <div class="row ctable">
         <div class="col-sm ">
           <h6>Component matches for license <span class="hoverlicense"></span></h6>
-          <table class="table table-hover thead-light">
+          <table class="table table-hover thead-light upgradeable">
             <thead>
               <tr>
                 <th scope="col">Vendor</th>
@@ -128,7 +128,7 @@
       <div class="row vtable">
         <div class="col-sm ">
           <h6>Components with <span class="severity"></span> Vulnerabilities</h6>
-          <table class="table table-hover thead-light">
+          <table class="table table-hover thead-light upgradeable">
             <thead>
               <tr>
                 <th scope="col">Vendor</th>
