Fixed Bug: Added persistence to License obligation table

--- a/scans.html
+++ b/scans.html
@@ -35,7 +35,7 @@
 
   <div class="container-fluid">
     <div class="report-body scans">
-      
+
       <div class="row stable ">
         <div class="col-sm ">
           <h6>Scan Files</h6>
@@ -107,6 +107,7 @@
           </div>
         </div>
       </div>
+
       <div class="row ctable">
         <div class="col-sm ">
           <h6>Component matches for license <span class="hoverlicense"></span></h6>
@@ -142,8 +143,38 @@
         </div>
 
       </div>
+
+      <div class="row otable">
+        <div class="col-sm ">
+          <h6>License Obligations</h6>
+          <table class="table table-hover thead-light">
+            <thead>
+              <tr>
+                <th scope="col">License Name</th>
+                <th scope="col">Copyleft</th>
+                <th scope="col">Patent Hint</th>
+                <th scope="col">Incompatible Licenses</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+
+      </div>
+
+
+
+
     </div>
   </div>
+
+
+
+
+
+
+
 
   <script src="./scans.js"></script>
 </body>
