directory tree commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="desktop.css">
+  <link rel="stylesheet" href="./treejs-master/treejs-master/treejs.css" />
+
 
   <title>SCANOSS Quickscan Lite</title>
 </head>
@@ -219,6 +221,9 @@
 
 
   <script src="./renderer.js"></script>
+  <script src="./filetree.js"></script>
+  <script src="./treejs-master/treejs-master/tree.js"></script>
+
 </body>
 
 </html>
